src/tests/snapshots/crates_io__tests__server__block_traffic_via_ip.snap
---
source: src/tests/server.rs
expression: resp.json()
---
{
  "errors": [
    {
      "detail": "We are unable to process your request at this time. This usually means that you are in violation of our API data access policy (https://crates.io/data-access). Please email help@crates.io and provide the request id "
    }
  ]
}
