src/tests/snapshots/crates_io__tests__server__user_agent_is_required-2.snap
---
source: src/tests/server.rs
expression: resp.json()
snapshot_kind: text
---
{
  "errors": [
    {
      "detail": "We require that all requests include a `User-Agent` header.  To allow us to determine the impact your bot has on our service, we ask that your user agent actually identify your bot, and not just report the HTTP client library you're using.  Including contact information will also reduce the chance that we will need to take action against your bot.\n\nBad:\n  User-Agent: reqwest/0.9.1\n\nBetter:\n  User-Agent: my_crawler\n\nBest:\n  User-Agent: my_crawler (my_crawler.com/info)\n  User-Agent: my_crawler (help@my_crawler.com)\n\nIf you believe you've received this message in error, please email help@crates.io and include the request id .\n"
    }
  ]
}
